--- a/ecomsite/perfumeshop/static/css/style.css
+++ b/ecomsite/perfumeshop/static/css/style.css
@@ -1,7 +1,3 @@
-.main-card {
-    margin-top: 20px;
-}
-
 .product-card img {
     margin-top: 10px;
     width: 100%;
@@ -22,12 +18,11 @@
 }
 
 .price-range span {
-    margin: 0 5px;
-}
+    margin-top: 10px;
+} */
 
-.custom-container {
-    max-width: 1200px;
-    margin: 0 auto;
+.filter-section h5 {
+    margin-top: 20px;
 }
 
 .btn_style {
@@ -37,17 +32,14 @@
     justify-content: center;
 }
 
-.btn {
+.button {
     border-radius: 0px;
     margin: 10px;
 }
 
-.pagination {
-    justify-content: center;
-    align-items: center;
+.paginator {
     display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
-.product-card {
-    border: none;
-}
