--- a/ecomsite/perfumeshop/templates/perfumeshop/checkout.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/checkout.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h3>Checkout</h3>
-</body>
-</html>
+{% extends 'perfumeshop/main.html' %}
+{% load static %}
+{% block content %}
+
+<h1>Chcekout</h1>
+
+{%  endblock content %}
