--- a/ecomsite/perfumeshop/templates/perfumeshop/detail.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/detail.html
@@ -1,43 +1,19 @@
-{% load static %}
 <!DOCTYPE html>
+{% extends 'perfumeshop/main.html' %}
+{% load static %}
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'perfumeshop/detail.css' %}">
 
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <title>Product Image</title>
-    <style>
 
-    </style>
+    <title>Product Image</title>
+
 </head>
 <body>
-    <header class="bg-dark text-white">
-        <nav class="navbar navbar-expand-lg navbar-dark container">
-            <a class="navbar-brand" href="#">LOGO</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Promocje</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Perfumy</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Makijaż</a></li>
-                    <!-- Add more categories as needed -->
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="nazwa produktu, marka" aria-label="Search">
-                    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
-    </header>
-
-    <div class="container mt-5">
+    <!-- <div class="container mt-5">
         <div class="row">
             <div class="col-md-6 img-container">
                 <img src="{{ product_object.image }}" class="img-fluid enlarged-image" alt="Product Image">
@@ -65,6 +41,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
+
+    {%  endblock content %}
 </body>
 </html>
