--- a/ecomsite/perfumeshop/templates/perfumeshop/index.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/index.html
@@ -1,190 +1,95 @@
+{% extends 'perfumeshop/main.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfume Store</title>
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% endblock %}
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-
-<!--    <style>-->
-<!--        .main-card {-->
-<!--            margin-top: 20px;-->
-<!--        }-->
-<!--        .product-card img {-->
-<!--            margin-top: 10px;-->
-<!--            width: 100%;-->
-<!--            height: 250px;-->
-<!--            object-fit: contain;-->
-<!--        }-->
-<!--        .price-range {-->
-<!--            margin-top: 10px;-->
-<!--            display: flex;-->
-<!--            align-items: center;-->
-<!--        }-->
-<!--        .price-range input {-->
-<!--            margin-top: 10px;-->
-<!--            width: 80px;-->
-<!--            margin-right: 5px;-->
-<!--        }-->
-<!--        .price-range span {-->
-<!--            margin: 0 5px;-->
-<!--        }-->
-<!--        .custom-container {-->
-<!--            max-width: 1200px;-->
-<!--            margin: 0 auto;-->
-<!--        }-->
-<!--        .btn {-->
-<!--            border-radius: 0px;-->
-<!--            margin: 10px;-->
-<!--        }-->
-<!--        .btn_style {-->
-<!--            padding: 10px;-->
-<!--            align-items: center;-->
-<!--            display: flex;-->
-<!--            justify-content: center;-->
-<!--        }-->
-<!--        .pagination {-->
-<!--            justify-content: center;-->
-<!--            align-items: center;-->
-<!--            display: flex;-->
-<!--        }-->
-<!--    </style>-->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
-    <div class="container custom-container">
-        <div class="row">
-            <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">Navbar</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                      <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="#">Features</a>
-                        <button id="cart" data-html="true" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-                        Cart(0)
-                        </button>
-                        <a class="nav-item nav-link disabled" href="#">Disabled</a>
-                      </div>
-                    </div>
-                  </nav>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <form class="card card-sm" method="get" id="search-form">
-                    <div class="card-body row no-gutters align-items-center">
-                        <div class="col">
-                            <input type="search" name="item_name" placeholder="Search for products" class="form-control form-control-borderless" value="{{ request.GET.item_name }}">
-                        </div>
-                        <div class="col-auto">
-                            <button class="btn btn-success" type="submit">Search</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <div class="row main-card">
-            <aside class="col-md-3 filter-section">
-                <h5>Price range</h5>
-                <form method="get" id="filter-form">
-                    <div class="price-range">
-                        <input type="number" class="form-control mb-2" id="minPrice" name="min_price" placeholder="0" value="{{ request.GET.min_price }}">
-                        <span class="mx-2"> - </span>
-                        <input type="number" class="form-control mb-2" id="maxPrice" name="max_price" placeholder="100" value="{{ request.GET.max_price }}">
-                        <button type="submit" class="btn btn-primary mt-3">Filter</button>
-                    </div>
-                    <h5>Brands</h5>
-                    <div class="btn-group-vertical">
-                        {% for brand in all_brands %}
-                            <button type="submit" class="btn btn-link text-left" name="brands" value="{{ brand }}" {% if brand == request.GET.brands %}style="font-weight: bold;"{% endif %}>{{ brand }}</button>
-                        {% endfor %}
-                    </div>
-                </form>
-            </aside>
-
-            <main class="col-md-9" id="perfume-container">
-                <div class="row">
-                    {% for perfume in perfumes %}
-                    <div class="col-md-4 mb-4">
-                        <div class="card product-card">
-                            <img src="{{ perfume.image }}" class="card-img-top" alt="{{ perfume.name }}">
-                            <div class="card-body">
-                                <h4 class="card-title">{{ perfume.brand }}</h4>
-                                <h5 id="nm{{ perfume.id }}" class="product-name">{{ perfume.name }}</h5>
-                                <p class="product-type">{{ perfume.type }}</p>
-                                <p class="product-price">{{ perfume.price }} zł</p>
-                            </div>
-                            <div class="btn_style">
-                                <a href="{{ perfume.id }}" class="btn btn-warning">View</a>
-                                <button id="{{ perfume.id }}" class="btn atc btn-warning">Add to cart</button>
-                            </div>
-                        </div>
-                    </div>
+{% block content %}
+<div class="container custom-container">
+    <div class="row main-card">
+        <aside class="col-md-3 filter-section">
+            <h5>Price range</h5>
+            <form method="get" id="filter-form">
+                <div class="price-range">
+                    <input type="number" class="form-control mb-2" id="minPrice" name="min_price" placeholder="0" value="{{ request.GET.min_price }}">
+                    <span class="mx-2"> - </span>
+                    <input type="number" class="form-control mb-2" id="maxPrice" name="max_price" placeholder="100" value="{{ request.GET.max_price }}">
+                    <button type="submit" class="btn btn-primary mt-3">Filter</button>
+                </div>
+                <h5>Brands</h5>
+                <div class="btn-group-vertical">
+                    {% for brand in all_brands %}
+                        <button type="submit" class="btn btn-link text-left" name="brands" value="{{ brand }}" {% if brand == request.GET.brands %}style="font-weight: bold;"{% endif %}>{{ brand }}</button>
                     {% endfor %}
                 </div>
-            </main>
-        </div>
+            </form>
+        </aside>
 
-        <div class="row paginator">
-            <div class="col-md-12">
-                <ul class="pagination">
-                    {% if perfumes.has_previous %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page=1{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">&laquo; First</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ perfumes.previous_page_number }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">Previous</a>
-                        </li>
-                    {% endif %}
-
-                    {% for num in perfumes.paginator.page_range %}
-                        {% if perfumes.number == num %}
-                            <li class="page-item active">
-                                <a class="page-link" href="#">{{ num }}</a>
-                            </li>
-                        {% elif num <= 3 or num == perfumes.paginator.num_pages %}
-                            <li class="page-item">
-                                <a class="page-link" href="?page={{ num }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">{{ num }}</a>
-                            </li>
-                        {% elif num == 4 %}
-                            <li class="page-item">
-                                <a class="page-link" href="#">...</a>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
-
-                    {% if perfumes.has_next %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ perfumes.next_page_number }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">Next</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ perfumes.paginator.num_pages }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">Last &raquo;</a>
-                        </li>
-                    {% endif %}
-                </ul>
+        <main class="col-md-9" id="perfume-container">
+            <div class="row">
+                {% for perfume in perfumes %}
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="{{ perfume.image }}" class="card-img-top" alt="{{ perfume.name }}">
+                        <div class="card-body">
+                            <h4 class="card-title">{{ perfume.brand }}</h4>
+                            <h5 id="nm{{ perfume.id }}" class="product-name">{{ perfume.name }}</h5>
+                            <p class="product-type">{{ perfume.type }}</p>
+                            <p class="product-price">{{ perfume.price }} zł</p>
+                        </div>
+                        <div class="btn_style">
+                            <a href="{{ perfume.id }}" class="btn btn-warning">View</a>
+                            <button id="{{ perfume.id }}" class="btn atc btn-warning button">Add to cart</button>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
             </div>
-        </div>
+        </main>
     </div>
 
-<!--     <script src="{% static 'perfumeshop/custom.js' %}"></script>-->
+    <div class="row paginator">
+        <div class="col-md-12">
+            <ul class="pagination">
+                {% if perfumes.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page=1{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">&laquo; First</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ perfumes.previous_page_number }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">Previous</a>
+                    </li>
+                {% endif %}
 
-    <script src="{% static 'perfumeshop/custom.js' %}"></script>
-</body>
-</html>
+                {% for num in perfumes.paginator.page_range %}
+                    {% if perfumes.number == num %}
+                        <li class="page-item active">
+                            <a class="page-link" href="#">{{ num }}</a>
+                        </li>
+                    {% elif num <= 3 or num == perfumes.paginator.num_pages %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ num }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">{{ num }}</a>
+                        </li>
+                    {% elif num == 4 %}
+                        <li class="page-item">
+                            <a class="page-link" href="#">...</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
 
+                {% if perfumes.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ perfumes.next_page_number }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">Next</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ perfumes.paginator.num_pages }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">Last &raquo;</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+{% block extra_js %}
+<script src="{% static 'js/custom.js' %}"></script>
+{% endblock %}
