--- a/ecomsite/perfumeshop/templates/perfumeshop/detail.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/detail.html
@@ -1,48 +1,46 @@
-<!DOCTYPE html>
 {% extends 'perfumeshop/main.html' %}
 {% load static %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/detail.css' %}">
+{% endblock %}
 {% block content %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'perfumeshop/detail.css' %}">
 
-
-    <title>Product Image</title>
-
-</head>
-<body>
-    <!-- <div class="container mt-5">
+ <div class="container mt-5">
+ <a class="btn btn-outline-dark" id="back-button" href="{% url 'index' %}">&#x2190; Continue Shopping</a>
         <div class="row">
             <div class="col-md-6 img-container">
                 <img src="{{ product_object.image }}" class="img-fluid enlarged-image" alt="Product Image">
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 position-relative">
                 <h1>{{ product_object.brand }} {{ product_object.name }}</h1>
                 <span class="perfume_type"> {{ product_object.type }}</span><br>
-                <span class="current-price h4">{{ product_object.price }}</span>
+                <span class="current-price h4">{{ product_object.price|floatformat:2 }}</span>
 
-                <div class="mt-3">
-                    <select id="quantity" name="quantity">
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                      <option value="6">6</option>
-                      <option value="7">7</option>
-                      <option value="8">8</option>
-                      <option value="9">9</option>
-                      <option value="10">10</option>
-                    </select>
-                    <button class="btn btn-dark">Add to cart </button>
-                </div>
+
             </div>
         </div>
-    </div> -->
+ </div>
+<table class="table table-striped">
+    <tbody>
+        <tr>
+            <td>Top notes</td>
+            <td>Mint, Italian Lemon, Green Apple</td>
+        </tr>
+        <tr>
+            <td>Middle notes</td>
+            <td>Tonka Beans, Geranium, Ambroxan</td>
+        </tr>
+        <tr>
+            <td>Base notes</td>
+            <td>Vanilla, Vetiver, Cedar, Oakmoss</td>
+        </tr>
+        <tr>
+            <td>Fragrance category</td>
+            <td>aromatic</td>
+        </tr>
 
-    {%  endblock content %}
-</body>
-</html>
+    </tbody>
+</table>
+
+{%  endblock content %}
