--- a/ecomsite/perfumeshop/templates/perfumeshop/main.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/main.html
@@ -12,13 +12,19 @@
         let user = '{{request.user}}'
 
 		function getToken(name) {
+
         let cookieValue = null;
+
         if (document.cookie && document.cookie !== '') {
+
             const cookies = document.cookie.split(';');
+
             for (let i = 0; i < cookies.length; i++) {
+
                 const cookie = cookies[i].trim();
-                // Does this cookie string begin with the name we want?
+
                 if (cookie.substring(0, name.length + 1) === (name + '=')) {
+
                     cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
                     break;
                 }
@@ -26,10 +32,36 @@
         }
         return cookieValue;
     }
+
     const csrftoken = getToken('csrftoken');
+
+    function getCookie(name) {
+
+		    let cookieArr = document.cookie.split(";");
+
+		    for(let i = 0; i < cookieArr.length; i++) {
+		        let cookiePair = cookieArr[i].split("=");
+
+		        if(name === cookiePair[0].trim()) {
+
+		            return decodeURIComponent(cookiePair[1]);
+		        }
+		    }
+
+		    return null;
+		}
+
+		let cart = JSON.parse(getCookie('cart'));
+
+		if (cart === undefined){
+			cart = {};
+			console.log('Cart Created!', cart);
+			document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/";
+		}
+		console.log('Cart:', cart);
     </script>
-    {% block extra_css %}
-    {% endblock %}
+{% block extra_css %}
+{% endblock %}
 </head>
 <body>
 
@@ -76,6 +108,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
     {% block extra_js %}
+        <script src="{% static 'js/cart.js' %}"></script>
     {% endblock %}
 </body>
 </html>
